--- a/packages/scratch/package.json
+++ b/packages/scratch/package.json
@@ -5,6 +5,53 @@
   "author": "Maksim Yaromin",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^3.7.2"
+    "@angular/compiler-cli": "^8.2.14",
+    "@ngtools/webpack": "^8.3.20",
+    "@types/node": "^12.12.14",
+    "autoprefixer": "^9.7.2",
+    "css-loader": "^3.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "raw-loader": "^4.0.0",
+    "sass": "^1.23.7",
+    "style-loader": "^1.0.1",
+    "typescript": "^3.7.2",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-filter-warnings-plugin": "^1.2.1"
+  },
+  "dependencies": {
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "classlist.js": "^1.1.20150312",
+    "core-js": "3.4.5",
+    "rxjs": "^6.5.3",
+    "sass-loader": "^8.0.0",
+    "typescript": "^3.5.3"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --mode development --open"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
