--- a/packages/scratch/tsconfig.json
+++ b/packages/scratch/tsconfig.json
@@ -57,5 +57,9 @@
     "experimentalDecorators": true,           /* Enables experimental support for ES7 decorators. */
     "emitDecoratorMetadata": true             /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "compileOnSave": false
+  "compileOnSave": false,
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
+  }
 }
